TCP protocol & parameters

--- a/task4/src/index.css
+++ b/task4/src/index.css
@@ -7,6 +7,17 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+}
+
+.theory {
+    text-align: justify;
+}
+
+.screenshots {
+  text-align: center;
+}
+
+.section-heading {
   text-align: center;
 }
 
