--- a/task5/src/index.css
+++ b/task5/src/index.css
@@ -7,7 +7,19 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+}
+
+.theory {
+    text-align: justify;
+}
+
+.screenshots {
   text-align: center;
+}
+
+.section-heading {
+  text-align: center;
+  font-size: 3rem;
 }
 
 h2 {
@@ -18,8 +30,12 @@ h3 {
   font-size: 1.5em;
 }
 
+h4 {
+  margin-bottom: 5px;
+}
+
 p {
-  margin-bottom: 1em;
+  margin-bottom: 3.5em;
 }
 
 ul {
